change the launchpad tiles

--- a/webapp/view/Launchpad.view.xml
+++ b/webapp/view/Launchpad.view.xml
@@ -29,7 +29,7 @@
 					enableLazyLoading="false">
 					<uxap:sections>
 						<!--My Home Group-->
-						<uxap:ObjectPageSection title="My Home">
+						<uxap:ObjectPageSection title="Introduction">
 							<uxap:subSections>
 								<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
 									<uxap:blocks>
@@ -56,6 +56,17 @@
 													</TileContent>
 												</tileContent>
 											</GenericTile>
+										</html:div>
+									</uxap:blocks>
+								</uxap:ObjectPageSubSection>
+							</uxap:subSections>
+						</uxap:ObjectPageSection>
+						<!--Work Space Group-->
+						<uxap:ObjectPageSection title="Fiori 2.0">
+							<uxap:subSections>
+								<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
+									<uxap:blocks>
+										<html:div class="utg-fiori-launchpad-main-tileContainer">
 											<!--UI5-->
 											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="SAP UI5"
 												subheader="Enterprise-ready web applications" frameType="OneByOne" app:tileName="topic-ui5" press="onLaunchpadTilePress">
@@ -63,139 +74,6 @@
 													<TileContent unit="Version" footer="1.42">
 														<content>
 															<ImageContent src="sap-icon://sap-ui5"/>
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-										</html:div>
-									</uxap:blocks>
-								</uxap:ObjectPageSubSection>
-							</uxap:subSections>
-						</uxap:ObjectPageSection>
-						<!--Work Space Group-->
-						<uxap:ObjectPageSection title="Work Space">
-							<uxap:subSections>
-								<uxap:ObjectPageSubSection class="utg-fiori-launchpad-main-subSection">
-									<uxap:blocks>
-										<html:div class="utg-fiori-launchpad-main-tileContainer">
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - no press event"
-												subheader="Subheader" frameType="OneByOne">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<ImageContent src="sap-icon://line-charts"/>
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loaded - with press event"
-												subheader="Subheader" frameType="OneByOne" press="press">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<ImageContent src="sap-icon://home-share"/>
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - no press event"
-												subheader="Subheader" frameType="OneByOne" state="Loading">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<NumericContent scale="M" value="2.1"
-																valueColor="Good" indicator="Up" />
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Loading - with press event"
-												subheader="Subheader" frameType="OneByOne" state="Loading" press="press">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<NumericContent scale="M" value="1.96"
-																valueColor="Error" indicator="Down" />
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - no press event"
-												subheader="Subheader" frameType="TwoByOne" state="Failed">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<FeedContent
-																contentText="@@notify Great outcome of the Presentation today. The new functionality and the design was well received. Berlin, Tokyo, Rome, Budapest, New York, Munich, London"
-																subheader="Subheader" value="9">
-															</FeedContent>
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Failed - with press event"
-												subheader="Subheader" frameType="TwoByOne" state="Failed" press="press">
-												<tileContent>
-													<TileContent unit="Unit" footer="Footer">
-														<content>
-															<FeedContent
-																contentText="@@notify Great outcome of the Presentation today. The new functionality and the design was well received. Berlin, Tokyo, Rome, Budapest, New York, Munich, London"
-																subheader="Subheader" value="9">
-															</FeedContent>
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<SlideTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout">
-												<tiles>
-													<GenericTile
-														backgroundImage="test-resources/sap/m/demokit/sample/GenericTileAsFeedTile/images/NewsImage1.png"
-														frameType="TwoByOne" state="Loading">
-														<tileContent>
-															<TileContent unit="Unit" footer="Footer">
-																<content>
-																	<NewsContent
-																		contentText="Status Loading"
-																		subheader="Subheader">
-																	</NewsContent>
-																</content>
-															</TileContent>
-														</tileContent>
-													</GenericTile>
-													<GenericTile
-														backgroundImage="test-resources/sap/m/demokit/sample/GenericTileAsFeedTile/images/NewsImage2.png"
-														frameType="TwoByOne" state="Loaded" press="press">
-														<tileContent>
-															<TileContent unit="Unit" footer="Footer">
-																<content>
-																	<NewsContent
-																		contentText="Status Loaded"
-																		subheader="Subheader">
-																	</NewsContent>
-																</content>
-															</TileContent>
-														</tileContent>
-													</GenericTile>
-												</tiles>
-											</SlideTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled"
-												subheader="Subheader" frameType="OneByOne" state="Disabled">
-												<tileContent>
-													<TileContent footer="Footer" unit="Unit">
-														<content>
-															<NumericContent value="3"
-																icon="sap-icon://travel-expense" />
-														</content>
-													</TileContent>
-												</tileContent>
-											</GenericTile>
-											<GenericTile class="sapUiTinyMarginBegin sapUiTinyMarginTop utg-fiori-launchpad-tileLayout" header="Status Disabled - with press event"
-												subheader="Subheader" frameType="OneByOne" state="Disabled" press="press">
-												<tileContent>
-													<TileContent footer="Footer" unit="Unit">
-														<content>
-															<NumericContent value="3"
-																icon="sap-icon://travel-expense" />
 														</content>
 													</TileContent>
 												</tileContent>
