add custom SlideNavContainer control

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -90,3 +90,7 @@
 .utg-fiori-launchpad-tileLayout {
 	float: left;
 }
+
+/*********************************************/
+/******************* Slides ******************/
+/*********************************************/
