--- a/webapp/component/introduction/view/Main.view.xml
+++ b/webapp/component/introduction/view/Main.view.xml
@@ -6,7 +6,15 @@
 	xmlns:core="sap.ui.core"
 	xmlns:mvc="sap.ui.core.mvc"
 	xmlns:l="sap.ui.layout"
+	xmlns:utg="utegration.fiori.frontend.control"
 	xmlns="sap.m">
 
+	<utg:SlideNavContainer id="utg-fiori-SlidePagesNavContainer" width="100%" height="100%"
+		nextSlide="onNextSlide"
+		prevSlide="onPrevSlide">
+        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-01" id="utg-slide-1"/>
+        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-02" id="utg-slide-2"/>
+        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-03" id="utg-slide-3"/>
+    </utg:SlideNavContainer>
 
 </mvc:View>
