add custom control - Slide

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -94,3 +94,8 @@
 /*********************************************/
 /******************* Slides ******************/
 /*********************************************/
+
+.utg-fiori-slide {
+	width: 100%;
+}
+
