--- a/webapp/component/introduction/view/Main.view.xml
+++ b/webapp/component/introduction/view/Main.view.xml
@@ -12,9 +12,9 @@
 	<utg:SlideNavContainer id="utg-fiori-SlidePagesNavContainer" width="100%" height="100%"
 		nextSlide="onNextSlide"
 		prevSlide="onPrevSlide">
-        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-01" id="utg-slide-1"/>
-        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-02" id="utg-slide-2"/>
-        <mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-03" id="utg-slide-3"/>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-01"/></utg:Slide>
+        <utg:Slide background="Orange"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-02"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-03"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
