--- a/webapp/component/introduction/view/Main.view.xml
+++ b/webapp/component/introduction/view/Main.view.xml
@@ -14,7 +14,7 @@
 		prevSlide="onPrevSlide">
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-01"/></utg:Slide>
         <utg:Slide background="Orange"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-02"/></utg:Slide>
-        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-03"/></utg:Slide>
+        <utg:Slide background="Indigo"><mvc:XMLView viewName="utegration.fiori.frontend.component.introduction.view.slides.Slide-03"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
