--- a/webapp/control/css/AnimateStrokeText.css
+++ b/webapp/control/css/AnimateStrokeText.css
@@ -1,11 +1,13 @@
 .utg-fiori-animateStrokeText {
     background-size: 0% 0.15em;
     background-repeat: no-repeat;
-    background-position: 0 0.95em;
-    background-image: linear-gradient(to bottom, #ff4cff 0%, #ff4cff 100%);
+    background-position: 0 1em;
+    background-image: linear-gradient(45deg, #92b967 0%, #009ec3 100%);
     text-shadow: 0px 0.025em 0.1em rgba(0, 0, 0, 0.2);
     -webkit-transition: all .2s ease !important;
     transition: all .2s ease !important;
+    margin-left: 0.3em;
+    margin-right: 0.3em;
 }
 
 .utg-fiori-animateStrokeText.stroked {
