--- a/webapp/control/css/FormatText.css
+++ b/webapp/control/css/FormatText.css
@@ -7,10 +7,11 @@
        url("../../font/Brandon_bld_it-webfont.svg#BrandonGrotesqueBoldItalic") format('svg'); /* Legacy iOS */
 }
 
+.utg-fiori-formatText {
+	padding: 0 3em;
+}
 
 .utg-fiori-formatText .sapMText {
-	/*font-family: 'Amaranth', sans-serif;*/
-	font-family: 'brandon';
 	display: inline;
 }
 
@@ -26,12 +27,24 @@
 
 /* Level - H1 */
 .utg-fiori-formatText.textLevel-H1 .sapMText {
+	font-family: 'brandon';
 	font-size: 8vmin;
 	font-weight: 400;
 }
 
 /* Level - H2 */
 .utg-fiori-formatText.textLevel-H2 .sapMText {
+	font-family: 'brandon';
 	font-size: 6vmin;
 	font-weight: 400;
+}
+
+/* Level - Normal */
+.utg-fiori-formatText.textLevel-Normal .sapMText {
+	font-family: 'brandon';
+	font-size: 3vmin;
+	font-weight: 400;
+}
+.utg-fiori-formatText.textLevel-Normal img {
+	height: 2.5vmin;
 }
