finish history of Object Page

--- a/webapp/css/style.css
+++ b/webapp/css/style.css
@@ -94,9 +94,13 @@
 }
 
 /*********************************************/
-/******************* Slides ******************/
+/**************** Image Sizes ****************/
 /*********************************************/
 
-.utg-fiori-slide {
-	width: 100%;
+.utg-fiori-imageSizeSmall {
+	width: 50vmin;
+}
+
+.utg-fiori-imageSizeMed {
+	width: 70vmin;
 }
