--- a/webapp/control/css/SlideNavContainer.css
+++ b/webapp/control/css/SlideNavContainer.css
@@ -1,12 +1,21 @@
 .utg-fiori-slideContainer {
+    transition: background 800ms ease;
+}
 
-	background-position: 50% 50%;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background: #FFFFFF;
-
-    -webkit-transition: all 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
-    transition: all 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
+.utg-fiori-slideContainer::before {
+	content: ""; 
+	width: 100%;
+    height: 100%;
+    display: block;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 0;
+    opacity: 0;
+    background-image: -moz-linear-gradient(45deg, #92b967 0%, #009ec3 100%);
+	background-image: -webkit-linear-gradient(45deg, #92b967 0%, #009ec3 100%);
+	background-image: linear-gradient(45deg, #92b967 0%, #009ec3 100%);
+    transition: opacity 800ms ease;
 }
 
 /* Red */
@@ -80,8 +89,9 @@
 }
 
 /* GreenBlue */
-.utg-fiori-slideContainer.utg-fiori-slideContainerBackground-GreenBlue{
+.utg-fiori-slideContainer.utg-fiori-slideContainerBackground-GreenBlue::before {
 	background-image: -moz-linear-gradient(45deg, #92b967 0%, #009ec3 100%); /* FF3.6-15 */
 	background-image: -webkit-linear-gradient(45deg, #92b967 0%, #009ec3 100%); /* Chrome10-25,Safari5.1-6 */
 	background-image: linear-gradient(45deg, #92b967 0%, #009ec3 100%); /* W3C, IE10+, FF16+, Chrome26+, Opera12+, Safari7+ */
+	opacity: 1;
 }
