--- a/webapp/control/css/AnimateObject.css
+++ b/webapp/control/css/AnimateObject.css
@@ -4,7 +4,7 @@
     transition: all 800ms cubic-bezier(0.26, 0.86, 0.44, 0.985);
 }
 
-.utg-fiori-animateObj.hidden {
+.utg-fiori-animateObj.utg-fiori-hidden {
 	opacity: 0;
 	-webkit-transition: none;
     transition: none;
