--- a/webapp/component/principles/view/Main.view.xml
+++ b/webapp/component/principles/view/Main.view.xml
@@ -16,7 +16,8 @@
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-02"/></utg:Slide>
         <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-03"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-04"/></utg:Slide>
-        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-05"/></utg:Slide>
+        <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-05"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-06"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
