--- a/webapp/component/principles/view/Main.view.xml
+++ b/webapp/component/principles/view/Main.view.xml
@@ -18,6 +18,8 @@
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-04"/></utg:Slide>
         <utg:Slide background="BlueGray"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-05"/></utg:Slide>
         <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-06"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-07"/></utg:Slide>
+        <utg:Slide background="Dark"><mvc:XMLView viewName="utegration.fiori.frontend.component.principles.view.slides.Slide-08"/></utg:Slide>
     </utg:SlideNavContainer>
 
 </mvc:View>
